# HE-MOD

./: .gitignore  HE-MOD.desktop  Hacker Evolution (symlink)  README.md  pyproject.toml
he_mod/: HE_MOD.ui  __main__.py
